{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 1310,
  "lineage": "7eacdf39-4b55-8bef-6869-d13ca55c7cef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Amit1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9d27a9f4f5c0efc",
            "arn": "arn:aws:ec2:ap-south-1:966544194236:instance/i-05316812ac1e29f5c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05316812ac1e29f5c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AmitWin",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d042efecfe64d0c2",
            "private_dns": "ip-172-17-80-92.ap-south-1.compute.internal",
            "private_ip": "172.17.80.92",
            "public_dns": "ec2-13-233-15-79.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.15.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071e60303067e3d9b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3a5db305a1e3d7d",
            "tags": {
              "Name": "Amit1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0629cec3a3fd5e9e4",
              "sg-0c2c1cef501ffea59"
            ]
          },
          "dependencies": [
            "aws_security_group.all_http",
            "aws_security_group.all_ssh",
            "aws_subnet.my_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:route-table/rtb-0b2532037545bfdb5",
            "id": "rtb-0b2532037545bfdb5",
            "owner_id": "966544194236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082097a0d3612eb57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.internet_gw",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087fbad39af47323f",
            "route_table_id": "rtb-0b2532037545bfdb5",
            "subnet_id": "subnet-0b3a5db305a1e3d7d"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.my_subnet",
            "module.vpc_module.aws_internet_gateway.internet_gw",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:security-group/sg-0c2c1cef501ffea59",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2c1cef501ffea59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "966544194236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:security-group/sg-0629cec3a3fd5e9e4",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0629cec3a3fd5e9e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSHC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "966544194236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:subnet/subnet-0b3a5db305a1e3d7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.80.64/27",
            "id": "subnet-0b3a5db305a1e3d7d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966544194236",
            "tags": {
              "Name": "tf-example"
            },
            "tags_all": {
              "Name": "tf-example"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:loadbalancer/app/tomcat-lb/e09e5462fb182853",
            "arn_suffix": "app/tomcat-lb/e09e5462fb182853",
            "dns_name": "internal-tomcat-lb-2029167008.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:loadbalancer/app/tomcat-lb/e09e5462fb182853",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tomcat-lb",
            "security_groups": [
              "sg-0b056e4861e117fab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bb6f18301beda2c"
              },
              {
                "subnet_id": "subnet-0ac17f96b33816fe7"
              }
            ],
            "subnets": [
              "subnet-00bb6f18301beda2c",
              "subnet-0ac17f96b33816fe7"
            ],
            "tags": {
              "Environment": "NON-PROD",
              "Name": "tomcat-lb"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:listener/app/tomcat-lb/e09e5462fb182853/fca8b21e534ef84d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:targetgroup/tomcat-lb-default/1bfb076f9a8a1222",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:listener/app/tomcat-lb/e09e5462fb182853/fca8b21e534ef84d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:loadbalancer/app/tomcat-lb/e09e5462fb182853",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_lb.alb",
            "module.alb_module.aws_lb_target_group.tg",
            "module.sg.aws_security_group.this",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:targetgroup/tomcat-lb-default/1bfb076f9a8a1222",
            "arn_suffix": "targetgroup/tomcat-lb-default/1bfb076f9a8a1222",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:targetgroup/tomcat-lb-default/1bfb076f9a8a1222",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tomcat-lb-default",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "NON-PROD",
              "Name": "tomcat-lb-default-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_module_ext",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:loadbalancer/app/web-lb/43e06d4c6f5521c4",
            "arn_suffix": "app/web-lb/43e06d4c6f5521c4",
            "dns_name": "web-lb-2063914894.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:loadbalancer/app/web-lb/43e06d4c6f5521c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "security_groups": [
              "sg-0b056e4861e117fab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0729628593122a350"
              },
              {
                "subnet_id": "subnet-09dfac048440cac7b"
              }
            ],
            "subnets": [
              "subnet-0729628593122a350",
              "subnet-09dfac048440cac7b"
            ],
            "tags": {
              "Environment": "NON-PROD",
              "Name": "web-lb"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module_ext",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:listener/app/web-lb/43e06d4c6f5521c4/a7925d3fa7dd0bc8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:targetgroup/web-lb-default/f39385e2f7f546db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:listener/app/web-lb/43e06d4c6f5521c4/a7925d3fa7dd0bc8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:loadbalancer/app/web-lb/43e06d4c6f5521c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module_ext.aws_lb.alb",
            "module.alb_module_ext.aws_lb_target_group.tg",
            "module.sg.aws_security_group.this",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module_ext",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:targetgroup/web-lb-default/f39385e2f7f546db",
            "arn_suffix": "targetgroup/web-lb-default/f39385e2f7f546db",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:966544194236:targetgroup/web-lb-default/f39385e2f7f546db",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-lb-default",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "NON-PROD",
              "Name": "web-lb-default-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:security-group/sg-0b056e4861e117fab",
            "description": "Temp Sg allowed all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b056e4861e117fab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "temp-sg",
            "name_prefix": "",
            "owner_id": "966544194236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "NON-PROD",
              "Name": "Demo-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:route-table/rtb-035c937a62edffbbd",
            "default_route_table_id": "rtb-035c937a62edffbbd",
            "id": "rtb-035c937a62edffbbd",
            "owner_id": "966544194236",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08c8039d6e4e93a44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PRIVATE"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_nat_gateway.nat_gw",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0412189332d91c7fb",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-57-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.57.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-NAT-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:internet-gateway/igw-082097a0d3612eb57",
            "id": "igw-082097a0d3612eb57",
            "owner_id": "966544194236",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-IGW"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0412189332d91c7fb",
            "id": "nat-08c8039d6e4e93a44",
            "network_interface_id": "eni-077690eb1e1ddfdd2",
            "private_ip": "172.17.80.29",
            "public_ip": "65.1.57.170",
            "subnet_id": "subnet-0729628593122a350",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-NAT-GW"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:route-table/rtb-0d511556b7b4c1b62",
            "id": "rtb-0d511556b7b4c1b62",
            "owner_id": "966544194236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082097a0d3612eb57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PUBLIC"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.internet_gw",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bc39bbde7e00b63",
            "route_table_id": "rtb-035c937a62edffbbd",
            "subnet_id": "subnet-0ac17f96b33816fe7"
          },
          "dependencies": [
            "module.vpc_module.aws_default_route_table.private_rt",
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_nat_gateway.nat_gw",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace15f24518c6012",
            "route_table_id": "rtb-035c937a62edffbbd",
            "subnet_id": "subnet-00bb6f18301beda2c"
          },
          "dependencies": [
            "module.vpc_module.aws_default_route_table.private_rt",
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_nat_gateway.nat_gw",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036ed71fbd3ef4cb8",
            "route_table_id": "rtb-0d511556b7b4c1b62",
            "subnet_id": "subnet-0729628593122a350"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.internet_gw",
            "module.vpc_module.aws_route_table.public_rt",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b59df2dddaccc13",
            "route_table_id": "rtb-0d511556b7b4c1b62",
            "subnet_id": "subnet-09dfac048440cac7b"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.internet_gw",
            "module.vpc_module.aws_route_table.public_rt",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:subnet/subnet-0ac17f96b33816fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.80.128/25",
            "id": "subnet-0ac17f96b33816fe7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966544194236",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PRIVATE1"
            },
            "tags_all": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PRIVATE1"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:subnet/subnet-00bb6f18301beda2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.81.0/25",
            "id": "subnet-00bb6f18301beda2c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966544194236",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PRIVATE2"
            },
            "tags_all": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PRIVATE2"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:subnet/subnet-0729628593122a350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.80.0/27",
            "id": "subnet-0729628593122a350",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "966544194236",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PUBLIC1"
            },
            "tags_all": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PUBLIC1"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:subnet/subnet-09dfac048440cac7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.80.32/27",
            "id": "subnet-09dfac048440cac7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "966544194236",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PUBLIC2"
            },
            "tags_all": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-PUBLIC2"
            },
            "vpc_id": "vpc-0ee0a0d99ac83647b"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966544194236:vpc/vpc-0ee0a0d99ac83647b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.80.0/23",
            "default_network_acl_id": "acl-0992e8e2f861fd111",
            "default_route_table_id": "rtb-035c937a62edffbbd",
            "default_security_group_id": "sg-06f4ad78095ad6fe8",
            "dhcp_options_id": "dopt-41b3782a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ee0a0d99ac83647b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-035c937a62edffbbd",
            "owner_id": "966544194236",
            "tags": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-VPC"
            },
            "tags_all": {
              "Environment": "Demo",
              "ManagedBy": "Terraform",
              "Name": "Demo-test-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}